--- a/registrationwebapp/assets/css/main.css
+++ b/registrationwebapp/assets/css/main.css
@@ -3880,6 +3880,16 @@
 
 		}
 
+/* Progress Bar */
+	#myProgress {
+		width: 100%;
+		background-color: grey;
+	}
+	#myBar {
+		width: 1%;
+		height: 30px;
+		background-color: green;
+	}
 /* Intro */
 
 	#intro {
