HTML changes, frontend complete

--- a/registrationwebapp/assets/css/main.css
+++ b/registrationwebapp/assets/css/main.css
@@ -1721,10 +1721,10 @@
 		}
 
 			h1.major:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #295EA6, #77AAE3);
+				background-image: -webkit-linear-gradient(to right, #295EA6, #77AAE3);
+				background-image: -ms-linear-gradient(to right, #295EA6, #77AAE3);
+				background-image: linear-gradient(to right, #295EA6, #77AAE3);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3253,11 +3253,11 @@
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #1F487E;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #272838;
 		}
 
 		.wrapper.style2 {
@@ -3269,7 +3269,7 @@
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #92AFD7;
 		}
 
 		.wrapper.style3-alt {
@@ -3534,7 +3534,7 @@
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #272838;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3772,13 +3772,15 @@
 
 			#sidebar nav a:before {
 				background: #3c2c62;
+                
+                background-image: linear-gradient(to right, #272838, #1F487E);
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #272838, #1F487E);
+				background-image: -webkit-linear-gradient(to right, #272838, #1F487E);
+				background-image: -ms-linear-gradient(to right, #272838, #1F487E);
+				background-image: linear-gradient(to right, #272838, #1F487E);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
